kubernetes-deployments/customapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-app
  labels:
    app: custom-app
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: custom-app
  template:
    metadata:
      labels:
        app: custom-app
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: custom-app
        image: 420392929933.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: customapp-service
spec:
  selector:
    app: custom-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
