kubernetes-deployments/customapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: customapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 172-238-162-7.ip.linodeusercontent.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: customapp-service
              port:
                number: 8080
